--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -202,7 +202,7 @@
                                     <color key="titleShadowColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="jia:" destination="BYZ-38-t0r" eventType="touchDragInside" id="soW-v3-fFT"/>
+                                    <action selector="jia:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4TB-14-e9k"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8vh-Me-W9m">
@@ -216,6 +216,15 @@
                                 </state>
                                 <connections>
                                     <action selector="er:" destination="BYZ-38-t0r" eventType="touchUpInside" id="taM-4h-Van"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="sJr-Ed-wmY">
+                                <rect key="frame" x="137" y="381" width="57" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <animations/>
+                                <state key="normal" title="AC"/>
+                                <connections>
+                                    <action selector="AC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SKf-C5-o21"/>
                                 </connections>
                             </button>
                         </subviews>
